--- a/index.html
+++ b/index.html
@@ -133,6 +133,13 @@
             <p>TIMBO ISATOU DAPHNE</p>
         </a>
     </div>
+
+    <div class="team-member">
+        <a href="https://lilymorake.github.io/">
+            <img src="img/lilly.jpeg" alt="Team Member 2" class="round-logo">
+            <p>MORAKE OMOGOLO OMAATLA</p>
+        </a>
+    </div>
 </p>
         </a>
     </div>
