--- a/index.html
+++ b/index.html
@@ -140,6 +140,13 @@
             <p>MORAKE OMOGOLO OMAATLA</p>
         </a>
     </div>
+
+    <div class="team-member">
+        <a href="https://naharezannat.github.io/">
+            <img src="img/zannat.jpeg" alt="Team Member 2" class="round-logo">
+            <p>ZANNAT MOST NAHARE</p>
+        </a>
+    </div>
 </p>
         </a>
     </div>
