--- a/index.html
+++ b/index.html
@@ -50,17 +50,24 @@
     width: 100px; /* Adjust the size as needed */
     height: 100px; /* Adjust the size as needed */
     margin: 10px;
+    align-items: center;
 }
 
 /* Style for the team-member divs */
 .team-member {
     text-align: center;
+    display: inline-block;
+    width: 100px;
+    height: 100px;
 }
 
 /* Style for the team member names */
 .team-member p {
-    margin-top: 5px;
-    font-weight: bold;
+    /*margin-top: 5px;
+    font-weight: bold;*/
+
+    display: table-row-group;
+    
 }
 
     </style>
@@ -109,42 +116,21 @@
     <div class="team-member">
         <a href="https://nanagak.github.io/">
             <img src="img/nancy.jpeg" alt="Team Member 2" class="round-logo">
-            <p>GAKIZA NANCY</p>
+            <p>Gazika Nancy</p>
         </a>
     </div>
 
     <div class="team-member">
         <a href="https://mdkamrulhossain016846.github.io/fasttut/">
             <img src="img/Kamrul.jpeg" alt="Team Member 2" class="round-logo">
-            <p>MD KAMRUL HOSSAIN</p>
+            <p>MD Kamrul Hossain</p>
         </a>
     </div>
 
     <div class="team-member">
         <a href="https://masud613.github.io/my_page4/">
             <img src="img/masud.jpeg" alt="Team Member 2" class="round-logo">
-            <p>PRINCE MD MASUD PERVEZ</p>
-        </a>
-    </div>
-
-    <div class="team-member">
-        <a href="https://daphnetimbo.github.io/daphnes_page/">
-            <img src="img/daphne.jpeg" alt="Team Member 2" class="round-logo">
-            <p>TIMBO ISATOU DAPHNE</p>
-        </a>
-    </div>
-
-    <div class="team-member">
-        <a href="https://lilymorake.github.io/">
-            <img src="img/lilly.jpeg" alt="Team Member 2" class="round-logo">
-            <p>MORAKE OMOGOLO OMAATLA</p>
-        </a>
-    </div>
-
-    <div class="team-member">
-        <a href="https://naharezannat.github.io/">
-            <img src="img/zannat.jpeg" alt="Team Member 2" class="round-logo">
-            <p>ZANNAT MOST NAHARE</p>
+            <p>Prince MD Masud Pervez</p>
         </a>
     </div>
 </p>
